--- a/public/css/home.less
+++ b/public/css/home.less
@@ -34,7 +34,7 @@ body {
     font-size: 35px;
 }
 
-#backbox {
+#patient-myprof {
     background-color: #85C4ED;
 }
 
@@ -43,24 +43,20 @@ body {
     border: #146eb4 solid;
 }
 
-#upload {
-    background-color: #146eb4;
-    color: white;
-}
 
-#upload:hover {
+.upload:hover {
     opacity: 0.7;
 }
 
 #appointments {
-    background-color: azure;
-    margin-top:120px;
+    background-color: #F5F5F5;
+    margin-top:1%;
     padding-top: 1%;
     padding-bottom: 2%;
-    padding-left: 2%;
+    padding-left: 8%;
     clear:both;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
 }
 
 #topbox {
@@ -82,18 +78,17 @@ input, select {
 	-moz-box-shadow: @value;
 }
 
-.circular {
-	width: 300px;
-	height: 300px;
-	border-radius: 150px;
-	-webkit-border-radius: 150px;
+.patient-pic {
+	width: 200px;
+	height: 200px;
+	border-radius: 100px;
+	-webkit-border-radius: 100px;
 	-moz-border-radius: 150px;
 	box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
     background-color: white;
-    float:left;
-    margin:1%;
+    
 	}
 
 .board{
